<resources>
    <string name="app_name">Soli{dar}</string>
    <string name="cadastre_se_como_doador">Cadastre-se como doador</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cadastre_se_como_ong_donat_ria">Cadastre-se como ong donatária</string>
    <string name="repetir_senha">Repetir Senha</string>
    <string name="ao_criar_uma_conta_voc_concordar_com_nossos">Ao criar uma conta, você concordar com nossos</string>
    <string name="criar_uma_conta">Criar uma Conta</string>
    <string name="categorias">Categorias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="nome_da_ong">Nome da ONG</string>
    <string name="cnpj_cpf">CNPJ/CPF</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cep">CEP</string>
    <string name="endere_o">Endereço</string>
    <string name="n_mero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="salvar_altera_es">Salvar Alterações</string>
    <string name="sair">Sair</string>
    <string name="termos_e_condi_es">termos e condições.</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="carrinho">Carrinho</string>
    <string name="deletar_do_carrinho">Deletar do Carrinho</string>
</resources>