<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_donatario"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rece_ber_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tituloTela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_donatario">

        <TextView
            android:id="@+id/titulo_cadastro_donatario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_uma_conta"
            android:textColor="@color/cinzaEscuro"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_donatario" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/cinzaEscuro" />

    </LinearLayout>

    <EditText
        android:id="@+id/nome_ong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/nome_da_ong"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloTela"
         />

    <EditText
        android:id="@+id/entrar_email_donatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_ong" />

    <EditText
        android:id="@+id/senha_email_donatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entrar_email_donatario" />

    <EditText
        android:id="@+id/repetir_senha_donatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/repetir_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha_email_donatario"
         />

    <EditText
        android:id="@+id/cpfCnpj_donatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/cnpj_cpf"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repetir_senha_donatario"
        android:inputType="number"/>

    <EditText
        android:id="@+id/cep_donatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/cep"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cpfCnpj_donatario"
        android:inputType="number"/>

    <LinearLayout
        android:id="@+id/rowEndNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cep_donatario">

        <EditText
            android:id="@+id/endereco_donatario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/endere_o"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/numero_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/n_mero"
            android:inputType="number"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowBaiCid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/rowEndNum">

        <EditText
            android:id="@+id/bairro_donatario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/bairro"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rowEndNum"
            android:inputType="text"/>

        <EditText
            android:id="@+id/cidade_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/cidade"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/termo_condicoes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ao_criar_uma_conta_voc_concordar_com_nossos"
        android:textColor="@color/cinzaEscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rowBaiCid" />

    <TextView
        android:id="@+id/termo_condicoes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/termos_e_condi_es"
        android:textColor="#F40C0C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termo_condicoes1" />

    <Button
        android:id="@+id/botao_criar_donatario"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F40C0C"
        android:text="@string/criar_conta"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termo_condicoes2" />

</androidx.constraintlayout.widget.ConstraintLayout>