<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tituloTela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titulo_cadastro_perfil__donatario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar_perfil"
                android:textColor="@color/cinzaEscuro"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/cinzaEscuro" />

        </LinearLayout>

        <EditText
            android:id="@+id/nome_ong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/nome_da_ong"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tituloTela"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/entrar_email_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nome_ong" />

        <EditText
            android:id="@+id/senha_email_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/entrar_email_donatario"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/repetir_senha_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/repetir_senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senha_email_donatario"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/cpfCnpj_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/cnpj_cpf"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repetir_senha_donatario"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/cep_donatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/cep"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cpfCnpj_donatario" />

        <LinearLayout
            android:id="@+id/rowEndNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/cep_donatario">

            <EditText
                android:id="@+id/endereco_donatario"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/endere_o"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/numero_donatario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/n_mero"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowBaiCid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/rowEndNum">

            <EditText
                android:id="@+id/bairro_donatario"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rowEndNum"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/cidade_donatario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/cidade"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rowBaiCid"
            tools:layout_editor_absoluteX="20dp">

            <Button
                android:id="@+id/botao_salvar"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#F40C0C"
                android:text="@string/salvar_altera_es"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rowBaiCid" />

            <Button
                android:id="@+id/botao_sair"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="#F40C0C"
                android:text="@string/sair"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rowBaiCid"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>